[gd_scene load_steps=22 format=2]

[ext_resource path="res://scenes/player/dog.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/world/world.gd" type="Script" id=2]
[ext_resource path="res://scenes/world/platform.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/pixel art/ParallaxBackground/ParallaxLayers/CloudsLayer.png" type="Texture" id=4]
[ext_resource path="res://resources/pixel art/ParallaxBackground/ParallaxLayers/midgroundLayer.png" type="Texture" id=5]
[ext_resource path="res://resources/pixel art/ParallaxBackground/ParallaxLayers/backgroundLayer.png" type="Texture" id=6]
[ext_resource path="res://resources/pixel art/ParallaxBackground/ParallaxLayers/foregroundLayer.png" type="Texture" id=7]
[ext_resource path="res://scenes/gun/Gun.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/world/Camera2D.gd" type="Script" id=10]

[sub_resource type="Gradient" id=1]

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 256

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;


uniform float speed;



void fragment () {
	COLOR = texture(TEXTURE, vec2(UV.x + TIME * speed, UV.y));
	
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/speed = 0.01

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 3 )
shader_param/speed = 0.02

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 3 )
shader_param/speed = 0.03

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 3 )
shader_param/speed = 0.1

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 3 )
shader_param/speed = 0.05

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 3 )
shader_param/speed = 0.2

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10, 300 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 240, 10 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 10, 500 )

[node name="World" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}
velocity = 86

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position = Vector2( 240, 132 )
current = true
drag_margin_v_enabled = true
script = ExtResource( 10 )
shake_amount = 3
shake_duration = 10

[node name="Background" type="Node2D" parent="."]
scale = Vector2( 0.3, 0.3 )

[node name="Sprite" type="Sprite" parent="Background"]
modulate = Color( 0.713726, 0.713726, 0.666667, 1 )
position = Vector2( 1668.8, 391.769 )
rotation = -1.5708
scale = Vector2( 3.09461, 1741.07 )
texture = SubResource( 2 )

[node name="BackClouds" type="Sprite" parent="Background"]
modulate = Color( 1, 1, 1, 0.564706 )
material = SubResource( 4 )
texture = ExtResource( 4 )
centered = false

[node name="BackLayer" type="Sprite" parent="Background"]
material = SubResource( 5 )
position = Vector2( 0, -130 )
texture = ExtResource( 6 )
centered = false

[node name="FrontLayer2" type="Sprite" parent="Background"]
material = SubResource( 6 )
position = Vector2( 0, -193.333 )
texture = ExtResource( 7 )
centered = false

[node name="MidClouds" type="Sprite" parent="Background"]
modulate = Color( 1, 1, 1, 0.141176 )
material = SubResource( 7 )
texture = ExtResource( 4 )
centered = false

[node name="MidLayer" type="Sprite" parent="Background"]
material = SubResource( 8 )
position = Vector2( 0, -3.33332 )
texture = ExtResource( 5 )
centered = false

[node name="FrontLayer" type="Sprite" parent="Background"]
material = SubResource( 9 )
position = Vector2( 0, -33.3333 )
texture = ExtResource( 7 )
centered = false

[node name="Borders" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Left" type="CollisionShape2D" parent="Borders"]
position = Vector2( -10, 135 )
shape = SubResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="Right" type="CollisionShape2D" parent="Borders"]
position = Vector2( 490, 135 )
shape = SubResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="DeathBarrier" type="Area2D" parent="."]
position = Vector2( 240, 280 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathBarrier"]
shape = SubResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="FreeEnemies" type="Area2D" parent="."]
position = Vector2( -80, 280 )

[node name="freeEnemiesBoundary" type="CollisionShape2D" parent="FreeEnemies"]
shape = SubResource( 12 )

[node name="Dog" parent="." instance=ExtResource( 1 )]
position = Vector2( 128, 56 )
z_index = 4
_speed = 334

[node name="Gun" parent="Dog" instance=ExtResource( 8 )]
position = Vector2( -0.666481, -8 )
scale = Vector2( 0.373334, 0.373334 )
z_index = -1

[node name="Platforms" type="Node2D" parent="."]

[node name="Platform" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 81, 127 )

[node name="Platform2" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 368, 180 )

[node name="Platform3" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 678, 132 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Restart" type="Button" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.5
margin_top = -10.0
margin_right = 28.5
margin_bottom = 10.0
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI"]
margin_right = 40.0
margin_bottom = 14.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlatformTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="DeathBarrier" to="." method="_on_death_barrier_body_entered"]
[connection signal="body_entered" from="FreeEnemies" to="." method="_on_FreeEnemies_body_entered"]
[connection signal="shot" from="Dog/Gun" to="Camera2D" method="_on_Gun_shot"]
[connection signal="pressed" from="UI/Restart" to="." method="_on_restart_pressed"]
[connection signal="timeout" from="PlatformTimer" to="." method="_on_platform_timer_timeout"]
